--- a/rentflow_mini/includes/styles.css
+++ b/rentflow_mini/includes/styles.css
@@ -26,9 +26,9 @@ h1 {
     color: #111827;
 }
 
-label {
+label, .accordion-button {
     font-weight: normal;
-    font-size: 14px;
+    font-size: 12px;
     letter-spacing: 0px;
     text-transform: uppercase;
     color: #000000;
