--- a/rentflow_mini/includes/styles.css
+++ b/rentflow_mini/includes/styles.css
@@ -1,6 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap'); */
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-
 /* Variables de color para tema claro */
 :root {
     --color-fondo: #ffffff;
@@ -208,8 +205,11 @@ body.tema-oscuro .text-muted {
 
 /* Estilos generales siguiendo inspiración minimal y elegante */
 body {
-    font-family: "Noto Sans", Roboto, "Segoe UI", system-ui, -apple-system, 
-        "Helvetica Neue", Arial, "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-family: ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 
+        'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji', 
+        -webkit-bodyui-sans-serif, "Noto Sans", Roboto, "Segoe UI", system-ui, -apple-system, 
+        "Helvetica Neue", Arial, "Liberation Sans", sans-serif, "Apple Color Emoji", 
+        "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     background: #ffffff;
     color: #374151;
     padding-top: 5.5rem;
@@ -452,7 +452,7 @@ a.nav-link.active {
     .sidebar-nav .navbar-brand {
         color: #fff;
         font-size: 1.7rem;
-        font-weight: bold;
+        /* font-weight: bold; */
         margin: 1.2rem 0 1.5rem 1.2rem;
     }
 
