--- a/rentflow_mini/includes/styles.css
+++ b/rentflow_mini/includes/styles.css
@@ -229,10 +229,10 @@ nav {
     padding: 1rem;
 }
 
-h1 {
+h1, h2, h3, h4, h5 {
     /* Ajustado para ser consistente */
     margin-bottom: 1.5rem;
-    color: #111827;
+    letter-spacing: -1px;
 }
 
 label, .accordion-button {
